--- a/Assets/Rector/Scripts/Rector.asmdef
+++ b/Assets/Rector/Scripts/Rector.asmdef
@@ -18,7 +18,7 @@
     "precompiledReferences": [
         "R3.dll"
     ],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
