use the original Lasp

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,7 +11,7 @@
     "com.unity.test-framework": "1.4.6",
     "com.unity.visualeffectgraph": "17.0.4",
     "jp.hadashikick.vyaml": "https://github.com/hadashiA/VYaml.git?path=VYaml.Unity/Assets/VYaml#1.0.0",
-    "jp.keijiro.lasp": "https://github.com/shivaduke28/Lasp.git?path=Packages/jp.keijiro.lasp#v2",
+    "jp.keijiro.lasp": "https://github.com/keijiro/Lasp.git?path=Packages/jp.keijiro.lasp#v2",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
