simplify: remove PR list from release PR description
Remove the complex PR list generation that was causing YAML parsing issues.
Keep the PR description simple and focused.

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -62,57 +62,16 @@ jobs:
         run: |
           VERSION="${{ github.event.inputs.version }}"
           
-          # Get list of merged PRs since last release
-          PREVIOUS_TAG=$(git describe --tags --abbrev=0 --match "v*" HEAD^ 2>/dev/null || echo "")
-          
-          PR_BODY=$(cat <<EOF
-## Summary
+          gh pr create \
+            --title "Release v$VERSION" \
+            --body "## Summary
 - Bump Unity project version to $VERSION
 - Prepare for v$VERSION release
 
 ## Changes
-- Update \`bundleVersion\` in ProjectSettings from previous version to $VERSION
-
-## Recent Changes
-EOF
-)
-          
-          if [ -n "$PREVIOUS_TAG" ]; then
-            PR_BODY=$(cat <<EOF
-$PR_BODY
-Since $PREVIOUS_TAG:
-EOF
-)
-            # Get merged PRs since last tag
-            MERGED_PRS=$(gh pr list --state merged --base main --limit 100 --json number,title,author,url,mergedAt | \
-              jq -r --arg since "$(git log -1 --format=%aI $PREVIOUS_TAG)" \
-              '.[] | select(.mergedAt > $since) | "* \(.title) by @\(.author.login) in \(.url)"')
-            
-            if [ -n "$MERGED_PRS" ]; then
-              PR_BODY=$(cat <<EOF
-$PR_BODY
-$MERGED_PRS
-EOF
-)
-            else
-              PR_BODY=$(cat <<EOF
-$PR_BODY
-No merged PRs found since last release.
-EOF
-)
-            fi
-          fi
-          
-          PR_BODY=$(cat <<EOF
-$PR_BODY
+- Update \`bundleVersion\` in ProjectSettings to $VERSION
 
 ---
-This PR was automatically created by GitHub Actions workflow.
-EOF
-)
-          
-          gh pr create \
-            --title "Release v$VERSION" \
-            --body "$PR_BODY" \
+This PR was automatically created by GitHub Actions workflow." \
             --base main \
             --head "release/v$VERSION"
